--- a/BartenderApp/Views/Home/Index.cshtml
+++ b/BartenderApp/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>Waseem's Bar</h1>
     <p class="lead"> Welcome to Waseem's Bar, click on "Drink Menu" below to view our selection of drinks, or view your current orders in "Your Orders"</p>
     <p><a  class="btn btn-primary btn-lg"@Html.ActionLink("Drink Menu","Index","Drinks")</a></p> 
-     <p><a class="btn btn-primary btn-lg" @Html.ActionLink("Your Orders", "Index", "Orders")</a></p>
+     <p><a class="btn btn-primary btn-lg" @Html.ActionLink("Your Orders", "Order", "Drinks")</a></p>
 </div>
 
 <div class="row">
