--- a/BartenderApp/Views/Drinks/Order.cshtml
+++ b/BartenderApp/Views/Drinks/Order.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Drink</h4>
+        <h4>Are you sure you want to order this drink?</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
